<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_misviviendas"
        android:icon="@drawable/add_icon"
        android:title="@string/title_misviviendas" />

    <item
        android:id="@+id/navigation_misfavs"
        android:icon="@drawable/favorite_icon"
        android:title="@string/title_misfavs" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/chats_icon"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_config"
        android:icon="@drawable/settings_icon"
        android:title="@string/title_config" />


</menu>