<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="es.ucm.fdi.v3findmyroommate.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_misviviendas"
        android:name="es.ucm.fdi.v3findmyroommate.ui.viviendas.MisViviendasFragment"
        android:label="@string/title_misviviendas"
        tools:layout="@layout/fragment_mis_viviendas" />

    <fragment
        android:id="@+id/navigation_misfavs"
        android:name="es.ucm.fdi.v3findmyroommate.ui.favoritos.MisFavoritosFragment"
        android:label="@string/title_misfavs"
        tools:layout="@layout/fragment_mis_favoritos" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="es.ucm.fdi.v3findmyroommate.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="es.ucm.fdi.v3findmyroommate.ui.config.ConfigFragment"
        android:label="@string/title_config"
        tools:layout="@layout/fragment_config" />


</navigation>