<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reauthentication_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/reauth_dialog_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_current_password_text"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/reauth_dialog_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password_text"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/reauth_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_text"/>

</LinearLayout>