<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titulo_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_add_title"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/create_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_title_label"
            android:inputType="text" />

        <EditText
            android:id="@+id/create_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_label"
            android:inputType="text" />

        <EditText
            android:id="@+id/create_metros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/square_meters_label"
            android:inputType="number" />

        <EditText
            android:id="@+id/create_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_label"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/create_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_label"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:gravity="top"
            android:scrollbars="vertical" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button

                android:id="@+id/btn_seleccionar_imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image_button_text"
                android:layout_marginEnd="16dp" />


            <Button
                android:id="@+id/btn_eliminar_imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_image_button_text"
                android:layout_marginEnd="16dp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/preview_rect"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/border_rectangle"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imagen_anuncio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                />

            <!-- Flecha izquierda -->
            <ImageButton
                android:id="@+id/btn_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_flecha_izquierda"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />

            <!-- Flecha derecha -->
            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_flecha_derecha"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </FrameLayout>




        //---------------------------------------------------------------------------------------------------------

        <!-- Espacio adicional antes del título -->
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <!-- Título centrado -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tags_label"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <!-- Spinner Categoría -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            android:textSize="12sp"
            android:layout_marginBottom="5dp" />

        <Spinner
            android:id="@+id/spinner_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/categorias_array"
            android:layout_marginBottom="30dp" />

        <!-- Opciones para Casa -->
        <LinearLayout
            android:id="@+id/opciones_casa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- Tipo de Casa -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/house_type_label"
                android:textSize="12sp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/spinner_tipo_casa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_casa_array"
                android:layout_marginBottom="30dp" />

            <!-- Habitaciones -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_number_label"
                android:textSize="12sp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/spinner_habitaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/habitaciones_array"
                android:layout_marginBottom="30dp" />


            <!-- Baños -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bathroom_number_label"
                android:textSize="12sp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/spinner_banos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/banos_array"
                android:layout_marginBottom="30dp" />

            <!-- Interior/Exterior -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orientation_label"
                android:textSize="12sp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/spinner_exterior_interior_casa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/exterior_interior_array"
                android:layout_marginBottom="30dp" />

        </LinearLayout>



        <!-- Opciones para Habitación -->
        <LinearLayout
            android:id="@+id/opciones_habitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- Compañeros -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roommate_number_label"
                android:textSize="12sp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/spinner_companeros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/companeros_array"
                android:layout_marginBottom="30dp" />

            <!-- Género -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roommate_gender_label"
                android:textSize="12sp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:id="@+id/spinner_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/genero_array"
                android:layout_marginBottom="30dp" />


            <!-- Interior/Exterior -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orientation_label"
                android:textSize="12sp"
                android:layout_marginBottom="5dp" />
            <Spinner
                android:id="@+id/spinner_exterior_interior_habitacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/exterior_interior_array"
                android:layout_marginBottom="30dp" />

            <!-- Tipo de Baño -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bathroom_type_label"
                android:textSize="12sp"
                android:layout_marginBottom="5dp" />
            <Spinner
                android:id="@+id/spinner_tipo_bano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_bano_array"
                android:layout_marginBottom="30dp" />
        </LinearLayout>



        //---------------------------------------------------------------------------------------------------------





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <!-- Botón Guardar Anuncio -->
            <Button
                android:id="@+id/btn_guardar_anuncio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_add_button_text"
                android:layout_marginEnd="16dp" />

            <!-- Botón Cancelar -->
            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>