<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signUpActivity"
    tools:context=".SignUp">



    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/userNameEditText"
        app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
        android:text="@string/create_account"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/createAccountMessageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView"
        app:layout_constraintStart_toStartOf="@+id/userNameEditText"
        app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
        android:text="@string/create_account_message"/>


    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_custom"
        android:hint="@string/name"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_custom"
        android:paddingStart="10dp"
        android:hint="@string/last_name"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/email_hint"
        android:background="@drawable/edit_text_custom"
        android:paddingStart="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />
    <EditText
        android:id="@+id/userPasswordTextEdit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_custom"
        android:paddingStart="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmailEditText"
       />
    <EditText
        android:id="@+id/confirmUserPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/confirm_password_hint"
        android:background="@drawable/edit_text_custom"
        android:paddingStart="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordTextEdit" />
    <Button
        android:id="@+id/createAcountButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/create_account"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmUserPasswordEditText"

     />
    <TextView
        android:id="@+id/acountAlreadyExistingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_acount"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/createAcountButton"
        app:layout_constraintEnd_toStartOf="@+id/signInTextView"
        app:layout_constraintTop_toBottomOf="@+id/createAcountButton"
        android:layout_marginStart="90dp"

        />
    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintStart_toEndOf="@+id/acountAlreadyExistingTextView"
        app:layout_constraintTop_toBottomOf="@id/createAcountButton"
        android:layout_marginStart="3dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>